# YPV_chatbot

./: app.py  ingest.py  prompt_templates.py  pyproject.toml  utils.py
healer_rag_chatbot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rag_chatbot.egg-info/: requires.txt
vector_store/: index.faiss  metadata.pkl
